--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-cayman
+title: [Nilearn Workshop, Montreal May 2020]
+description: [Learn nilearn and contribute to its growth]
+
+github:
+    is_project_page: "false"
+
