--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: [Nilearn Workshop -- Montreal May 2020]
+title: [Nilearn Workshop - Montreal May 2020]
 description: [Learn nilearn and contribute to its growth]
 
 github:
