--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: "Nilearn Workshop - Montreal May 2020"
-description: "Learn nilearn and contribute to its growth"
+title: "Nilearn Workshop 2020"
+description: "Montréal May 18-22, 2020 - Learn nilearn and contribute to its growth"
 
 github:
     is_project_page: "false"
