--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: jekyll-theme-cayman
-title: "Nilearn Workshop 2020"
-description: "Online, May 19-22, 2020 - Learn nilearn and contribute to its growth"
+title: "Nilearn Dev Days 2020"
+description: |
+Online, May 19-22, 2020
+Join the Nilearn dev community and shape what's next.
 
 github:
     is_project_page: "false"
