--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: "Nilearn Dev Days 2020"
-description: "May 19-22, 2020\n\n
+description: | "May 19-22, 2020\n\n
 Join the Nilearn dev community and shape what's next"
 
 github:
