--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-cayman
 title: "Nilearn Dev Days 2020"
 description: | 
-"May 19-22, 2020 \n\n
-Join the Nilearn dev community and shape what's next"
+              May 19-22, 2020
+              Join the Nilearn development community and shape what's next
 
 github:
     is_project_page: "false"
