--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: "Nilearn Dev Days 2020"
-description: | 
+description: |
              Join the Nilearn development community and shape what's next
-
+baseurl: "/dev-days-2020"
 github:
     is_project_page: "false"
