--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: "Nilearn Dev Days 2020"
 description: |
-             Join the Nilearn development community and shape what's next
+        Join online the Nilearn development community and shape what's next
 
 github:
     is_project_page: "false"
