Cleanup for github pages

--- a/_config.yml
+++ b/_config.yml
@@ -60,5 +60,5 @@ url: "" # the base hostname & protocol for your site
 #google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-theme: jekyll-theme-prologue
+remote_theme: chrisbobbe/jekyll-theme-prologue 
 collections: [sections]
