--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ title: "Nilearn Dev Days 2020"
 subtitle: 
 description: >- # this means to ignore newlines until "baseurl:"
         Join online the Nilearn development community and shape what's next
-author: Your Incredible Name
-email: inilearn.events@gmail.com
+author: Nilearn team
+email: nilearn.events@gmail.com
 avatar: assets/images/avatar.jpg
 
 
