--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Nilearn Dev Days 2020"
-subtitle: 
+title: "Nilearn Days"
+subtitle: "Dev Days 2020"
 description: >- # this means to ignore newlines until "baseurl:"
-        Join online the Nilearn development community and shape what's next
+    Join online the Nilearn development community and shape what's next
 author: Nilearn team
 email: nilearn.events@gmail.com
 avatar: assets/images/avatar.jpg
