--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Nilearn Days"
-subtitle: "Dev Days 2020"
+title: "Nilearn Dev Days 2020"
+subtitle: "Science and Software"
 description: >- # this means to ignore newlines until "baseurl:"
     Join online the Nilearn development community and shape what's next
 author: Nilearn team
@@ -42,5 +42,5 @@ url: "" # the base hostname & protocol for your site
 #google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-remote_theme: chrisbobbe/jekyll-theme-prologue 
+remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
